--- a/navbar.html
+++ b/navbar.html
@@ -95,7 +95,7 @@
                                 <a class="btn btn-primary btn-block" href="/profilo.html"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
                                 </a>
                                 <hr/>
-                                <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="registrazione.html">Clicca qui!</a>
+                                <p class="text-center" style="margin-top: 0px; margin-bottom: 0px;">Non sei registrato? <a href="/registrazione.html">Clicca qui!</a>
                                 </p>
                             </form>
                         </li>
@@ -112,7 +112,7 @@
                 <div class="input-group">
                     <input type="search" placeholder="Cosa stai cercando?" class="form-control" />
                     <div class="input-group-btn ">
-                        <a class="btn btn-info" href="ricerca.html">
+                        <a class="btn btn-info" href="/ricerca.html">
                             <span class="fa fa-search"></span>
                         </a>
                     </div>
@@ -134,7 +134,7 @@
                                     <div class="input-group">
                                         <input type="search" style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
                                         <div class="input-group-btn ">
-                                            <a class="btn btn-info" href="ricerca.html">
+                                            <a class="btn btn-info" href="/ricerca.html">
                                                 <span class="fa fa-search"></span>
                                             </a>
                                         </div>
