--- a/profilo-modifica.html
+++ b/profilo-modifica.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">Registrazione</li>
+                        <li class="active">Profilo</li>
                     </ol>
                 </div>
             </div>
