--- a/registrazione.html
+++ b/registrazione.html
@@ -86,20 +86,27 @@
                             <div class="purchase-item-details">
                                 <table class="table">
                                     <tr>
-                                        <td>Nome *</td>
-                                        <td><input size="50" type="text" name="nome"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Cognome *</td>
-                                        <td><input size="50" type="text" name="cognome"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>EMail *</td>
+                                        <td>e-mail</td>
                                         <td><input size="50" type="email" name="email"></td>
                                     </tr>
                                     <tr>
-                                        <td>Password *</td>
+                                        <td>Password</td>
                                         <td><input size="50" type="password" name="password"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Titolo</td>
+                                        <td><select name="titolo">
+                                            <option value="M">Sig.</option>
+                                            <option value="F">Sig.ra</option>
+                                        </select></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Nome</td>
+                                        <td><input responsive size="50" type="text" name="nome"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Cognome</td>
+                                        <td><input size="50" type="text" name="cognome"></td>
                                     </tr>
                                     <tr>
                                         <td>Data di nascita</td>
@@ -110,32 +117,32 @@
                                         <td><input size="50" type="text" name="codicefiscale" maxlength="16"></td>
                                     </tr>
                                     <tr>
-                                        <td>Tipo documento</td>
-                                        <td><input size="50" type="text" name="docpersonale"></td>
+                                        <td>Indirizzo (residenza)</td>
+                                        <td><input size="50" type="text" name="indirizzo"></td>
                                     </tr>
                                     <tr>
-                                        <td>Numero documento</td>
-                                        <td><input size="50" type="text" name="numerodocpersonale"></td>
+                                        <td>C.A.P.</td>
+                                        <td><input size="50" type="text" name="cap"></td>
                                     </tr>
                                     <tr>
-                                        <td>Data di rilascio</td>
-                                        <td><input size="50" type="date" name="rilasciodocpersonale"></td>
+                                        <td>Città</td>
+                                        <td><input size="50" type="text" name="citta"></td>
                                     </tr>
                                     <tr>
-                                        <td>Data di scadenza</td>
-                                        <td><input size="50" type="date" name="scadenzadocpersonale"></td>
+                                        <td>Provincia</td>
+                                        <td><input size="50" type="text" name="provincia"></td>
                                     </tr>
                                     <tr>
-                                        <td>Cellulare</td>
+                                        <td>Stato</td>
+                                        <td><input size="50" type="text" name="stato"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Telefono (facoltativo)</td>
                                         <td><input size="50" type="tel" name="cellulare" type="number"></td>
                                     </tr>
                                 </table>
-                                <p><a class="btn btn-default" href="profilo.html" role="button">Conferma</a></p>
+                                <p><a class="btn btn-default" href="profilo.html" role="button">Registrati</a></p>
                                 
-                                <br><br>
-                    
-                                <p align="left">* Campi obbligatori</p>
-
                             </div>
 
                         </div>
