--- a/carrello.html
+++ b/carrello.html
@@ -111,8 +111,8 @@
                                 <p>2 adulti</p>
                                 <p>Totale: EUR 1.700,00</p>
                                 <hr/>
-                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
-                                <a class="btn btn-default" href="/acquisti_conparigi.html" role="button">Acquista</a>
+                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Riepilogo</a>
+                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
                                 <a class="btn btn-default" href="/carrello_noparigi.html" role="button">Rimuovi</a>
                                 <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
                             </div>
@@ -142,7 +142,7 @@
                                 <p>Totale: EUR 3.400,00
                                 </p>
                                 <hr/>
-                                <a class="btn btn-default" href="#" role="button">Modifica</a>
+                                <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-default" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
                                 <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
