--- a/carrello_noparigi.html
+++ b/carrello_noparigi.html
@@ -106,7 +106,7 @@
                                 <p>Totale: EUR 3.400,00
                                 </p>
                                 <hr/>
-                                <a class="btn btn-default" href="#" role="button">Modifica</a>
+                                <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-default" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
                                 <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
