--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -188,7 +188,8 @@
                         <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
 
                         <div class="panel-body">
-                                <a class="btn btn-warning pull-right" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Conferma</a>
+                                <a class="btn btn-warning pull-left" href="/viaggi/acquisto-viaggio.html" role="button">Modifica</a>
+                                <a class="btn btn-warning pull-right" href="/acquisti_conparigi.html" role="button">Conferma pagamento</a>
                         </div>
                     </div>
                 </div>
