--- a/carrello.html
+++ b/carrello.html
@@ -79,47 +79,6 @@
 
                 <div class="col-md-9">
 
-                    <div class="alert alert-info" role="alert">
-                        <i class="fa fa-info-circle"></i>
-                        <span class="sr-only">Error:</span> L'inserimento nel carrello non corrisponde ad una prenotazione!
-                    </div>
-                    
-
-                    <!-- PARIGI -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Parigi</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 11-07-2015 al 21-07-2015</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/parigi550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <div class="alert alert-warning" role="alert">
-                                    <i class="fa fa-exclamation-triangle"></i>
-                                    <span class="sr-only">Error:</span> Questo articolo ha subito una variazione di prezzo
-                                </div>
-                                <hr/>
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1.700,00</p>
-                                <hr/>
-                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Riepilogo</a>
-                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
-                                <a class="btn btn-default" href="/carrello_noparigi.html" role="button">Rimuovi</a>
-                                <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
-                            </div>
-
-                        </div>
-                    </div>
-
                     <!-- ISOLE FIJI -->
 
                     <div class="panel panel-default">
@@ -145,7 +104,6 @@
                                 <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-default" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
-                                <a class="btn btn-default" href="#" role="button">Salva per dopo</a>
                             </div>
 
                         </div>
@@ -165,8 +123,8 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <p>2 Viaggi</p>
-                            <p>Totale: EUR 5.100,00</p>
+                            <p>1 Viaggio</p>
+                            <p>Totale: EUR 3.400,00</p>
                             <hr/>
 
                             <a class="btn btn-warning pull-right" href="/carrello_vuoto.html" role="button">Svuota carrello</a>
