--- a/carrello_conparigi.html
+++ b/carrello_conparigi.html
@@ -138,6 +138,7 @@
                                 <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-default" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <p><em>( pulsanti disabilitati )</em></p>
                             </div>
 
                         </div>
