--- a/carrello.html
+++ b/carrello.html
@@ -104,6 +104,7 @@
                                 <a class="btn btn-default" href="#" role="button">Riepilogo</a>
                                 <a class="btn btn-default" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <p><em>( pulsanti disabilitati, occorre prima procedere con l'acquisto di un viaggio qualsiasi )</em></p>
                             </div>
 
                         </div>
