--- a/carrello.html
+++ b/carrello.html
@@ -97,6 +97,11 @@
                             <img src="img/isolefiji550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
+                                <div class="alert alert-warning" role="alert">
+                                    <i class="fa fa-exclamation-triangle"></i>
+                                    <span class="sr-only">Error:</span> Questo articolo ha subito una variazione di prezzo
+                                </div>
+                                <hr/>
                                 <p>2 adulti - 2 bambini</p>
                                 <p>Totale: EUR 3.400,00
                                 </p>
