--- a/recensioni.html
+++ b/recensioni.html
@@ -104,13 +104,13 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
-                                    <p class="help-block">Fai click su una foto per rimuoverla</p>
                                 </div>
                                 <hr />
                                 <div>
                                 <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                 <a class="btn btn-default" href="#" role="button">Modifica</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <p><em>( pulsanti disabilitati, occorre prima procedere con l'acquisto di un viaggio qualsiasi e l'inserimento di una recensione )</em></p>
                                 </div>
                             </div>
 
