--- a/recensioni_conparigi.html
+++ b/recensioni_conparigi.html
@@ -102,8 +102,8 @@
                                         <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
                                     </div>
                                     <div>
-                                <a class="btn btn-default" href="#" role="button">Carica foto</a>
-                                <a class="btn btn-default" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
+                                        <a class="btn btn-default" href="#" role="button">Carica foto</a>
+                                        <a class="btn btn-default" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
                                     </div>
                                 </form>
                             </div>
@@ -136,13 +136,13 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
-                                    <p class="help-block">Fai click su una foto per rimuoverla</p>
                                 </div>
                                 <hr />
                                 <div>
                                 <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                 <a class="btn btn-default" href="#" role="button">Modifica</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <p><em>( pulsanti disabilitati )</em></p>
                                 </div>
                             </div>
 
