--- a/acquisti.html
+++ b/acquisti.html
@@ -102,8 +102,9 @@
                                 <p>Transazione # 404-2941210-6149129</p>
                                 <p>Effettuata il: 22-4-2014</p>
                                 <hr/>
-                                <a class="btn btn-default" href="#" role="button">Scarica fattura</a>
-                                <a class="btn btn-default" href="#" role="button">Modifica recensione</a>
+                                <a class="btn btn-default" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
+                                <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
+                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica la recensione</a>
                             </div>
 
                         </div>
