--- a/recensioni_conparigiaggiunta.html
+++ b/recensioni_conparigiaggiunta.html
@@ -97,15 +97,14 @@
                             <img src="img/parigi550x550.jpg" alt="Immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                            <div class="purchase-item-details">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                                 <div>
                                 <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                 <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica</a>
                                 <a class="btn btn-default" href="/recensioni.html" role="button">Rimuovi</a>
                                 </div>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
                     
@@ -134,13 +133,13 @@
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_2.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_3.png" />
                                     <img class="review-upload-thumnb" alt="Immagine caricata dall'autore della recensione" src="img/maldive_mocked_upload_4.png" />
-                                    <p class="help-block">Fai click su una foto per rimuoverla</p>
                                 </div>
                                 <hr />
                                 <div>
                                 <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                 <a class="btn btn-default" href="#" role="button">Modifica</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <p><em>( pulsanti disabilitati )</em></p>
                                 </div>
                             </div>
 
