--- a/carrello.html
+++ b/carrello.html
@@ -106,10 +106,9 @@
                                 <p>Totale: EUR 3.400,00
                                 </p>
                                 <hr/>
-                                <a class="btn btn-default" href="#" role="button">Riepilogo</a>
-                                <a class="btn btn-default" href="#" role="button">Acquista</a>
-                                <a class="btn btn-default" href="#" role="button">Rimuovi</a>
-                                <p><em>( pulsanti disabilitati, occorre prima procedere con l'acquisto di un viaggio qualsiasi )</em></p>
+                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Riepilogo</a>
+                                <a class="btn btn-warning" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
+                                <a class="btn btn-default" href="/carrello_vuoto.html" role="button">Rimuovi</a>
                             </div>
 
                         </div>
