--- a/recensioni.html
+++ b/recensioni.html
@@ -107,10 +107,8 @@
                                 </div>
                                 <hr />
                                 <div>
-                                <a class="btn btn-default" href="#" role="button">Carica foto</a>
-                                <a class="btn btn-default" href="#" role="button">Modifica</a>
-                                <a class="btn btn-default" href="#" role="button">Rimuovi</a>
-                                <p><em>( pulsanti disabilitati, occorre prima procedere con l'acquisto di un viaggio qualsiasi e l'inserimento di una recensione )</em></p>
+                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica</a>
+                                <a class="btn btn-warning" href="/recensioni_vuoto.html" role="button">Rimuovi</a>
                                 </div>
                             </div>
 
