--- a/recensioni_conparigi.html
+++ b/recensioni_conparigi.html
@@ -102,8 +102,12 @@
                                         <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
                                     </div>
                                     <div>
+                                    <form action="demo_form.asp">
+                                        Aggiungi foto<input type="file" name="Image"><br>
                                         <a class="btn btn-default" href="#" role="button">Carica foto</a>
-                                        <a class="btn btn-default" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
+                                    </form>
+                                    <br><br>
+                                    <a class="btn btn-warning" href="/recensioni_conparigiaggiunta.html" role="button">Pubblica</a>
                                     </div>
                                 </form>
                             </div>
@@ -139,9 +143,8 @@
                                 </div>
                                 <hr />
                                 <div>
-                                <a class="btn btn-default" href="#" role="button">Carica foto</a>
                                 <a class="btn btn-default" href="#" role="button">Modifica</a>
-                                <a class="btn btn-default" href="#" role="button">Rimuovi</a>
+                                <a class="btn btn-warning" href="#" role="button">Rimuovi</a>
                                 <p><em>( pulsanti disabilitati )</em></p>
                                 </div>
                             </div>
