--- a/acquisti_conparigi.html
+++ b/acquisti_conparigi.html
@@ -109,7 +109,7 @@
                                                     </script>
                                 </p>
                                 <hr/>
-                                <a class="btn btn-default" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
+                                <a class="btn btn-warning" href="/fattura_404-2941210-0056455.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
                                 <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Scrivi una recensione</a>
                             </div>
@@ -140,7 +140,7 @@
                                 <p>Transazione # 404-2941210-6149129</p>
                                 <p>Effettuata il: 22-4-2014</p>
                                 <hr/>
-                                <a class="btn btn-default" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
+                                <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
                                 <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
                                 <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica la recensione</a>
                             </div>
