--- a/carrello_conparigi.html
+++ b/carrello_conparigi.html
@@ -101,7 +101,7 @@
                                 <p>Totale: EUR 1.700,00</p>
                                 <hr/>
                                 <a class="btn btn-default" href="/viaggi/acquisto-viaggio_riepilogo.html" role="button">Riepilogo</a>
-                                <a class="btn btn-default" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
+                                <a class="btn btn-warning" href="/viaggi/acquisto-viaggio.html" role="button">Acquista</a>
                                 <a class="btn btn-default" href="/carrello.html" role="button">Rimuovi</a>
                             </div>
 
@@ -136,7 +136,7 @@
                                 </p>
                                 <hr/>
                                 <a class="btn btn-default" href="#" role="button">Riepilogo</a>
-                                <a class="btn btn-default" href="#" role="button">Acquista</a>
+                                <a class="btn btn-warning" href="#" role="button">Acquista</a>
                                 <a class="btn btn-default" href="#" role="button">Rimuovi</a>
                                 <p><em>( pulsanti disabilitati )</em></p>
                             </div>
