--- a/recensioni_vuoto.html
+++ b/recensioni_vuoto.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">I miei acquisti</li>
+                        <li class="active">Le mie recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -68,8 +68,8 @@
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -78,36 +78,10 @@
                 <!-- SECTION CONTENT -->
 
                 <div class="col-md-9">
-
-                    <!-- MALDIVE -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Maldive</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" alt="immagine di copertina del viaggio" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2.100,00 - MASTERCARD</p>
-                                <p>Transazione # 404-2941210-6149129</p>
-                                <p>Effettuata il: 22-4-2014</p>
-                                <hr/>
-                                <a class="btn btn-warning" href="/fattura_404-2941210-6149129.pdf" role="button">Fattura</a>
-                                <a class="btn btn-default" href="/contatti.html" role="button">Segnala un problema</a>
-                                <a class="btn btn-default" href="/recensioni_conparigi.html" role="button">Modifica la recensione</a>
-                            </div>
-
-                        </div>
+                    
+                    <div class="alert alert-info" role="alert">
+                        <i class="fa fa-info-circle"></i>
+                        <span class="sr-only">Error:</span> Nessuna recensione presente!
                     </div>
 
                 </div>
