Badge carrello effetto dinamico
correzione del badge del carrello: ora cambia in funzione del numero di
articoli presenti

--- a/carrello_conparigi.html
+++ b/carrello_conparigi.html
@@ -185,7 +185,7 @@
     <!-- scripts parts -->
 
     <script>
-        $("#navbar").load("navbar.html");
+        $("#navbar").load("navbar_conparigi.html");
     </script>
     <script>
         $("#footer").load("footer.html");
