--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -210,7 +210,7 @@
     <!-- scripts parts -->
 
     <script>
-        $("#navbar ").load("/navbar.html ");
+        $("#navbar ").load("/navbar_conparigi.html ");
     </script>
     <script>
         $("#footer ").load("/footer.html ");
