Migliorie pagina ricerca
miglioramenti alla pagina ricerca.html rendendola più realistica, manca
il collegamento al'articolo del blog che sarà contenuto nella pagina
/blog/2015-05-01-alaska-sfida-tra-i-ghiacci.html

--- a/ricerca.html
+++ b/ricerca.html
@@ -60,9 +60,9 @@
                     <div class="input-group">
                         <span class="input-group-addon">Cerca in</span>
                         <select class="form-control search-select">
-                            <option>Tutto il sito</option>
-                            <option>Offerte</option>
+                            <option>-- Tutto il sito --</option>
                             <option>Blog</option>
+                            <option>Offerte</option>
                             <option>Recensioni</option>
                         </select>
                     </div>
@@ -86,29 +86,29 @@
             <div id="search-results">
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina del viaggio" src="img/alaska550x550.jpg">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina del viaggio" src="img/alaska200x200.jpg">
                     <div class="purchase-item-details">
-                        <a href="#"><h4>Viaggi - Alaska</h4></a>
-                        <p>... il viaggio può essere arricchito con numerose
-                            <mark>escursioni</mark>, acquistabili singolarmente. Gita con i cani da slitta, pesca sul ghiaccio, corso di motoslitta, sono solo alcune delle fantastiche esperienze che potrete ...</p>
+                        <a href="/blog/2015-05-01-alaska-sfida-tra-i-ghiacci.html"><h4>Blog - Alaska: sfida tra i ghiacciQ</h4></a>
+                        <p>... tantissime le
+                            <mark>escursioni</mark> disponibili! Gita con i cani da slitta per i più piccoli, per ripercorrere le vicissitudini del famoso cane Balto nel suo viaggio da Nenana a Nome ...</p>
                     </div>
                 </div>
 
                 <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina della recensione" src="img/frozen-deer-200x200.png">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina dell'offerta" src="img/berlino200x200.jpg">
                     <div class="purchase-item-details">
-                        <a href="#"><h4>Recensioni - Alaska</h4></a>
-                        <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
-                            <mark>escursioni</mark> e ci siamo divertiti tantissimo!! Ce n'è veramente per tutti i gusti! Ai bambini è piacuta soprattutto la cavalcata sulle renne, dove ...</p>
-                    </div>
-                </div>
-
-                <div class="row col-lg-12 search-result">
-                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina dell'offerta" src="img/egitto-200x200.jpg">
-                    <div class="purchase-item-details">
-                        <a href="#"><h4>Offerte - Egitto</h4></a>
+                        <a href="/viaggi/europa/berlino.html"><h4>Offerte - Berlino</h4></a>
                         <p>... e se prenoti 2
-                            <mark>escursioni</mark> prima della partenza l'escursione sui cammelli te la regaliamo noi!! E allora cosa aspetti? Prenota subito ...</p>
+                            <mark>escursioni</mark> prima della partenza, l'ingresso alla Berliner Fernsehturm te lo regaliamo noi!! E allora cosa aspetti? Prenota subito ...</p>
+                    </div>
+                </div>
+
+                <div class="row col-lg-12 search-result">
+                    <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina della recensione" src="img/maldive200x200.jpg">
+                    <div class="purchase-item-details">
+                        <a href="/recensioni_notlogged.html"><h4>Recensioni - Maldive</h4></a>
+                        <p>... io e la mia famiglia abbiamo partecipato a quasi tutte le
+                            <mark>escursioni</mark> e ci siamo divertiti tantissimo!! Ce n'è veramente per tutti i gusti! Ai bambini è piacuta soprattutto la pesca notturna dalle barche, dove ...</p>
                     </div>
                 </div>
 
