--- a/footer.html
+++ b/footer.html
@@ -52,11 +52,11 @@
                         <div class="col-sm-3 col-sm-offset-1">
                             <li>
                                 <p class="white">Link utili</p>
-                                <p> <a href="#">Mappa del sito</a>
+                                <p> <a href="/FAQ.html">FAQ</a>
                                     <br/>
-                                    <a href="/FAQ.html">FAQ</a>
+                                    <a href="/sicurezza.html">Informativa sulla Privacy</a>
                                     <br/>
-                                    <a href="#">EULA</a>
+                                    <a href="/tos.html">Termini di Servizio</a>
                                     <br/>
                                 </p>
                             </li>
@@ -68,7 +68,7 @@
                 <!--- RIGA COPYRIGHT --->
 
                 <div class="row" id="copyright">
-                    <p class="pull-left">Glas Travels &reg; | <a href="/sicurezza.html">Informativa sulla Privacy</a> | <a href="/tos.html">Termini di Servizio</a>
+                    <p class="pull-left">Glas Travels &reg; 2015 | <a href="#">Mappa del sito</a>
                     </p>
                     <p class="pull-right"><a href="#">Top</a>
                     </p>
