--- a/ricerca.html
+++ b/ricerca.html
@@ -88,7 +88,7 @@
                 <div class="row col-lg-12 search-result">
                     <img class="purchase-item-thumbnail fixed hidden-xs" alt="Immagine di copertina del viaggio" src="img/alaska200x200.jpg">
                     <div class="purchase-item-details">
-                        <a href="/blog/2015-05-01-alaska-sfida-tra-i-ghiacci.html"><h4>Blog - Alaska: sfida tra i ghiacciQ</h4></a>
+                        <a href="/blog/2015-05-01-alaska-sfida-tra-i-ghiacci.html"><h4>Blog - Alaska: sfida tra i ghiacci</h4></a>
                         <p>... tantissime le
                             <mark>escursioni</mark> disponibili! Gita con i cani da slitta per i più piccoli, per ripercorrere le vicissitudini del famoso cane Balto nel suo viaggio da Nenana a Nome ...</p>
                     </div>
